[gd_scene load_steps=2 format=3 uid="uid://ctpn4hvkhxoi3"]

[ext_resource type="Script" path="res://behaviours/edible_tracker.gd" id="1_vo18u"]

[node name="EdibleTracker" type="Area2D"]
script = ExtResource("1_vo18u")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="tracked" from="." to="." method="_on_tracked"]
[connection signal="untracked" from="." to="." method="_on_untracked"]
